

AM_CPPFLAGS = @Xyce_INCS@

SUBDIRS = Output

noinst_LTLIBRARIES = libIOInterface.la

libIOInterface_la_SOURCES = \
  $(srcdir)/src/N_IO_CmdParse.C \
  $(srcdir)/src/N_IO_NetlistImportTool.C \
  $(srcdir)/src/N_IO_DistributionTool.C \
  $(srcdir)/src/N_IO_OutputMgr.C \
  $(srcdir)/src/N_IO_OutputResponse.C \
  $(srcdir)/src/N_IO_OutputMacroResults.C \
  $(srcdir)/src/N_IO_OutputMOR.C \
  $(srcdir)/src/N_IO_OutputROM.C \
  $(srcdir)/src/N_IO_OutputResults.C \
  $(srcdir)/src/N_IO_PrintDeviceCount.C \
  $(srcdir)/src/N_IO_InitialConditions.C \
  $(srcdir)/src/N_IO_OutputterLocal.C \
  $(srcdir)/src/N_IO_OutputterFrequencyCSV.C \
  $(srcdir)/src/N_IO_OutputterFrequencyPrn.C \
  $(srcdir)/src/N_IO_OutputterFrequencyProbe.C \
  $(srcdir)/src/N_IO_OutputterFrequencyRaw.C \
  $(srcdir)/src/N_IO_OutputterFrequencyRawASCII.C \
  $(srcdir)/src/N_IO_OutputterFrequencyTecplot.C \
  $(srcdir)/src/N_IO_OutputterHBCSV.C \
  $(srcdir)/src/N_IO_OutputterHBPrn.C \
  $(srcdir)/src/N_IO_OutputterHBTecplot.C \
  $(srcdir)/src/N_IO_OutputterHDF5.C \
  $(srcdir)/src/N_IO_OutputterHomotopy.C \
  $(srcdir)/src/N_IO_OutputterHomotopyPrn.C \
  $(srcdir)/src/N_IO_OutputterHomotopyProbe.C \
  $(srcdir)/src/N_IO_OutputterHomotopyTecplot.C \
  $(srcdir)/src/N_IO_OutputterMPDEPrn.C \
  $(srcdir)/src/N_IO_OutputterMPDETecplot.C \
  $(srcdir)/src/N_IO_OutputterOverrideRaw.C \
  $(srcdir)/src/N_IO_OutputterOverrideRawASCII.C \
  $(srcdir)/src/N_IO_OutputterSensitivityPrn.C \
  $(srcdir)/src/N_IO_OutputterSensitivityTecplot.C \
  $(srcdir)/src/N_IO_OutputterSensitivityDakota.C \
  $(srcdir)/src/N_IO_OutputterTimeCSV.C \
  $(srcdir)/src/N_IO_OutputterTimePrn.C \
  $(srcdir)/src/N_IO_OutputterTimeProbe.C \
  $(srcdir)/src/N_IO_OutputterTimeRaw.C \
  $(srcdir)/src/N_IO_OutputterTimeRawASCII.C \
  $(srcdir)/src/N_IO_OutputterTimeTecplot.C \
  $(srcdir)/src/N_IO_Probe.C \
  $(srcdir)/src/N_IO_Tecplot.C \
  $(srcdir)/src/N_IO_OutputterAC.C \
  $(srcdir)/src/N_IO_OutputterDC.C \
  $(srcdir)/src/N_IO_OutputterHB.C \
  $(srcdir)/src/N_IO_OutputterMPDE.C \
  $(srcdir)/src/N_IO_OutputterRawOverride.C \
  $(srcdir)/src/N_IO_OutputterSensitivity.C \
  $(srcdir)/src/N_IO_OutputterTransient.C \
  $(srcdir)/src/N_IO_Objective.C \
  $(srcdir)/src/N_IO_RestartMgr.C \
  $(srcdir)/src/N_IO_SpiceSeparatedFieldTool.C \
  $(srcdir)/src/N_IO_CircuitMetadata.C \
  $(srcdir)/src/N_IO_CircuitBlock.C \
  $(srcdir)/src/N_IO_CircuitContext.C \
  $(srcdir)/src/N_IO_DeviceBlock.C \
  $(srcdir)/src/N_IO_OptionBlock.C \
  $(srcdir)/src/N_IO_ParameterBlock.C \
  $(srcdir)/src/N_IO_Report.C \
  $(srcdir)/src/N_IO_Outputter.C \
  $(srcdir)/src/N_IO_FunctionBlock.C \
  $(srcdir)/src/N_IO_RestartNode.C \
  $(srcdir)/src/N_IO_Op.C \
  $(srcdir)/src/N_IO_OpBuilders.C \
  $(srcdir)/src/N_IO_ActiveOutput.C \
  $(srcdir)/src/N_IO_mmio.C \
  $(srcdir)/src/N_IO_PkgOptionsMgr.C \
  $(srcdir)/src/N_IO_FourierMgr.C \
  $(srcdir)/include/N_IO_fwd.h \
  $(srcdir)/include/N_IO_Op.h \
  $(srcdir)/include/N_IO_OpBuilders.h \
  $(srcdir)/include/N_IO_ActiveOutput.h \
  $(srcdir)/include/N_IO_NetlistImportTool.h \
  $(srcdir)/include/N_IO_DistributionTool.h \
  $(srcdir)/include/N_IO_SpiceSeparatedFieldTool.h \
  $(srcdir)/include/N_IO_CircuitMetadata.h \
  $(srcdir)/include/N_IO_CircuitBlock.h \
  $(srcdir)/include/N_IO_CircuitContext.h \
  $(srcdir)/include/N_IO_DeviceBlock.h \
  $(srcdir)/include/N_IO_OptionBlock.h \
  $(srcdir)/include/N_IO_ParameterBlock.h \
  $(srcdir)/include/N_IO_FunctionBlock.h \
  $(srcdir)/include/N_IO_CmdParse.h \
  $(srcdir)/include/N_IO_mmio.h \
  $(srcdir)/include/N_IO_OutputMgr.h \
  $(srcdir)/include/N_IO_OutputMgrResponse.h \
  $(srcdir)/include/N_IO_OutputMacroResults.h \
  $(srcdir)/include/N_IO_OutputMOR.h \
  $(srcdir)/include/N_IO_OutputROM.h \
  $(srcdir)/include/N_IO_OutputResults.h \
  $(srcdir)/include/N_IO_OutputResponse.h \
  $(srcdir)/include/N_IO_PrintDeviceCount.h \
  $(srcdir)/include/N_IO_InitialConditions.h \
  $(srcdir)/include/N_IO_Report.h \
  $(srcdir)/include/N_IO_Outputter.h \
  $(srcdir)/include/N_IO_OutputterLocal.h \
  $(srcdir)/include/N_IO_OutputterFrequencyCSV.h \
  $(srcdir)/include/N_IO_OutputterFrequencyPrn.h \
  $(srcdir)/include/N_IO_OutputterFrequencyProbe.h \
  $(srcdir)/include/N_IO_OutputterFrequencyRaw.h \
  $(srcdir)/include/N_IO_OutputterFrequencyRawASCII.h \
  $(srcdir)/include/N_IO_OutputterFrequencyTecplot.h \
  $(srcdir)/include/N_IO_OutputterHBCSV.h \
  $(srcdir)/include/N_IO_OutputterHBPrn.h \
  $(srcdir)/include/N_IO_OutputterHBTecplot.h \
  $(srcdir)/include/N_IO_OutputterHomotopy.h \
  $(srcdir)/include/N_IO_OutputterHomotopyPrn.h \
  $(srcdir)/include/N_IO_OutputterHomotopyProbe.h \
  $(srcdir)/include/N_IO_OutputterHomotopyTecplot.h \
  $(srcdir)/include/N_IO_OutputterMPDEPrn.h \
  $(srcdir)/include/N_IO_OutputterMPDETecplot.h \
  $(srcdir)/include/N_IO_OutputterOverrideRaw.h \
  $(srcdir)/include/N_IO_OutputterOverrideRawASCII.h \
  $(srcdir)/include/N_IO_OutputterRawOverride.h \
  $(srcdir)/include/N_IO_OutputterSensitivityPrn.h \
  $(srcdir)/include/N_IO_OutputterSensitivityTecplot.h \
  $(srcdir)/include/N_IO_OutputterSensitivityDakota.h \
  $(srcdir)/include/N_IO_OutputterTimeCSV.h \
  $(srcdir)/include/N_IO_OutputterTimePrn.h \
  $(srcdir)/include/N_IO_OutputterTimeProbe.h \
  $(srcdir)/include/N_IO_OutputterTimeRaw.h \
  $(srcdir)/include/N_IO_OutputterTimeRawASCII!.h \
  $(srcdir)/include/N_IO_OutputterTimeTecplot.h \
  $(srcdir)/include/N_IO_Probe.h \
  $(srcdir)/include/N_IO_Tecplot.h \
  $(srcdir)/include/N_IO_OutputterAC.h \
  $(srcdir)/include/N_IO_OutputterDC.h \
  $(srcdir)/include/N_IO_OutputterHB.h \
  $(srcdir)/include/N_IO_OutputterMPDE.h \
  $(srcdir)/include/N_IO_OutputterRawOverride.h \
  $(srcdir)/include/N_IO_OutputterSensitivity.h \
  $(srcdir)/include/N_IO_OutputterTransient.h \
  $(srcdir)/include/N_IO_Objective.h \
  $(srcdir)/include/N_IO_RestartMgr.h \
  $(srcdir)/include/N_IO_RestartNode.h \
  $(srcdir)/include/N_IO_PkgOptionsMgr.h \
  $(srcdir)/include/N_IO_FourierMgr.h
